Account creation fixed